aboutMe section, Gallery section

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,6 +18,9 @@ body {
     background-image: url(/images/background_hero.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    transition: background-image 0.4s ease-in;
 }
 
 /* Animations */
@@ -65,5 +68,17 @@ body {
     to {
         opacity: 1;
         transform: translateX(0);
+    }
+}
+
+/* Moblies screens */
+
+@media (max-width: 576px) {
+    #hero {
+        background-image: url(/images/background_hero_mobile.jpeg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-attachment: fixed;
     }
 }
