--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -47,6 +47,22 @@ body {
     animation-delay: 0.7s;
 }
 
+.galleryImage {
+    animation: gallerySlideIn 0.9s forwards cubic-bezier(0.25, 1, 0.5, 1);
+}
+
+@keyframes gallerySlideIn {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 @keyframes fadeInTop {
     from {
         opacity: 0;
