--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,6 +6,8 @@ html {
 
 body {
     width: 100vw;
+    max-width: 100%;
+    overflow-x: hidden;
     height: 100vh;
     padding: 0;
     margin: 0;
