--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -111,6 +111,6 @@ body {
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
-        background-attachment: fixed;
+        background-attachment: scroll;
     }
 }
